--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
     --ifm-color-primary-lightest: #ff804f;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  background-color: #e3e2df;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,6 +28,16 @@
     --ifm-color-primary-lighter: #ff6429;
     --ifm-color-primary-lightest: #ff804f;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  background-color: #1b1b1d;
+  .custom-quote {
+background-color: #e3e2df;
+  }
+  table {
+    background-color: #e3e2df;
+  }
+  .my-special-table {
+    background-color: #e3e2df;
+  }
 }
 
 .anchor-link {
@@ -77,25 +88,25 @@ ul li::marker {
   color: white;
 }
 
-.markdown table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 16px; /* Adjust the margin as needed */
-  border: 1px solid #e3e2df; /* Border color */
-  padding: 8px;
-  text-align: left;
-}
-
-.markdown table td {
+table {
   background-color: white;
+  width: fit-content;
+  border-radius: 10px;
+  color: black;
+  text-align: center;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
-.markdown table th {
+.my-special-table {
   background-color: white;
-}
-
-body {
-  background-color: var(--#e3e2df); /* Use variable for body color */
+  width: 750px;
+  border-radius: 10px;
+  color: black;
+  text-align: center;
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 40px;
 }
 
 .custom-quote {
@@ -105,13 +116,40 @@ body {
   padding-bottom: 5px;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
+  color: black;
+  margin-bottom: 20px;
 }
 
 body {
   font-family: 'IBM Plex Sans', sans-serif; /* Replace 'Open Sans' with the desired font-family */
 }
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-/* src/css/custom.css */
+.custom-summary {
+  font-weight: bold;
+  cursor: pointer;
+}
 
+.box {
+  color: #0b00d1;
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 200px;
+  height: fit-content;
+  border-radius: 10px;
+  font-size: large;
+  font-weight: 500;
+  text-align: left;
+  background-color: white;
+  margin: 10px;
+}
+
+.box:hover {
+  background-color: #0a00d14e; /* Add underline on hover */
+  text-decoration: 0;
+}
+
+.box-container {
+  display: flex; /* Use flexbox for layout */
+}
