--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -88,6 +88,7 @@
 a {
   color: var(--highlight);
   text-decoration: none; /* Remove the default underline */
+  font-family: 'IBM Plex Sans';
 }
 
 /* Add underline when hovering over regular linked text */
@@ -157,7 +158,7 @@ table {
 }
 
 body {
-  font-family: 'IBM Plex Sans', sans-serif; /* Replace 'Open Sans' with the desired font-family */
+  font-family: 'IBM Plex Sans'; /* Replace 'Open Sans' with the desired font-family */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@@ -398,3 +399,40 @@ a:hover {
   max-width: 200px;
 }
 
+h1, h2, h3, h4, h5, h6, h7 {
+  font-family: 'IBM Plex Sans';
+}
+
+.navbar__title:after {
+  background-color: var(--highlight);
+  border-radius: 4px;
+  color: #fff;
+  content: "Beta";
+  margin: 0 .75em;
+  padding: .2em .5em;
+}
+
+.navbar__title:after, .text--uppercase {
+  text-transform: uppercase;
+}
+
+.button.button--primary {
+  background-color: var(--highlight);
+  color: white;
+  border: 0px;
+}
+
+.button.button--primary:hover {
+  background-color: #a9a9a9;
+  color: white;
+  border: 0px;
+}
+
+.button.button--secondary {
+  border: var(--highlight) 1.5px solid;
+}
+
+.button.button--secondary:hover {
+  background-color: var(--highlight);
+  color: white;
+}
