--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,15 @@
   overflow: hidden;
 }
 
+@media (max-width: 500px) {
+  .heroBanner {
+    padding: 4rem 0;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+  }
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
@@ -20,4 +29,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 500px) {
+  .buttons {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+  }
 }
