--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -65,14 +65,17 @@ background-color: #1b1b1d;
 }
 
 .title {
-  font-size: 3rem; /* Increased font size */
+  font-size: 6rem; /* Increased font size */
   font-weight: bold;
   margin-bottom: 10px;
+  font-family: Poppins;
+  font-weight: 900;
 }
 
 .subtitle {
-  font-size: 2rem;
+  font-size: 1rem;
   margin-bottom: 20px;
+  font-family: Poppins;
 }
 
 .button {
@@ -128,7 +131,7 @@ background-color: #1b1b1d;
   width: 75%; /* Set a specific width for the logo */
   height: auto; /* Maintain aspect ratio */
   opacity: 0;
-  animation: fadeInRight 3s ease-in-out forwards; /* Apply the fade-in animation */
+  animation: fadeInRight 5s ease-in-out forwards; /* Apply the fade-in animation */
 }
 
 @keyframes fadeInRight {
