--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -448,11 +448,12 @@ h1, h2, h3, h4, h5, h6, h7 {
   font-family: 'IBM Plex Sans';
 }
 
+
 .navbar__title:after {
   background-color: var(--highlight);
   border-radius: 4px;
   color: #fff;
-  content: "1.2";
+  content: "BETA";
   margin: 0 .75em;
   padding: .2em .5em;
 }
